# demorgan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: expression.hpp  lexer.hpp  parser.hpp  position.hpp  simplifier.hpp  token.hpp
src/: expression.cpp  lexer.cpp  main.cpp  parser.cpp  position.cpp  simplifier.cpp  token.cpp
